# pydiverse.pipedag

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  docker-compose-sqlserver.yaml  docker-compose.yaml  environment.yml  pipedag.yaml  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini  typos.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/scripts/: check_deps.sh  docker_compose_ready.sh
.github/workflows/: ci.yml  nightly_tests.yml  release.yml  test.yml  tests.yml  update-lockfiles.yml
.github/workflows/resources/: docker_compose_ready.sh
check_base_technologies/google_cloud_storage/: PIXI_ENVS_COMPARISON.md  README.md  _shared.py  duckdb_fsspec_demo.py  duckdb_httpfs_demo.py  fsspec_demo.py  pandas_demo.py  pixi.toml  polars_demo.py  pyarrow_demo.py  run_all.py
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst
docs/package/: README.md
docs/reference/: config.rst
docs/source/: best_practices.md  changelog.md  conf.py  database_testing.md  examples.md  index.md  license.md  parquet_s3.md  quickstart.md  table_backends.md
docs/source/examples/: best_practices_inline.md  best_practices_instances.md  best_practices_sql.md  environment.yml  group_and_visualize.ipynb  group_and_visualize.md  imperative_materialization.md  interactive_development.md  multi_instance_pipeline.md  raw_sql.md  realistic_pipeline.md  simple_pipeline.md  stage_validation.md
docs/source/reference/: api.rst  cli.md  config.md
example/: docker-compose.yaml  pipedag.yaml  pixi.toml  run_pipeline.py  simple_pipeline.py  stage_validation.py  visualization.py  visualization_legend.py
example_ibm_db2/: docker-compose.yaml  pipedag.yaml  pixi.toml  run_pipeline.py
example_imperative/: failing_example.py  pixi.toml  run_pipeline.py
example_interactive/: failing_flow_after_successful_debugging.py  pixi.toml  run_tasks_interactively.py
example_mssql/: docker-compose.yaml  download_parquet_files.py  pipedag.yaml  pixi.toml  realistic_pipeline.py  run_pipeline.py
example_parquet_s3/: docker-compose.yaml  init_jupyter_sql.py  jupyter_sql.ipynb  pipedag.yaml  pixi.toml  realistic_pipeline.py  run_pipeline.py
example_postgres/: pipedag.yaml  pipedag_with_instances.yaml  pipedag_with_instances_date.yaml  pixi.toml  realistic_pipeline.py  realistic_pipeline_sqa.py  realistic_pipeline_sqa_instances.py  realistic_pipeline_sqa_instances_date.py  run_pipeline.py  run_pipeline_small.py
example_snowflake/: pipedag.yaml  pixi.toml  realistic_pipeline.py  run_pipeline.py  run_pipeline_small.py
pdpipedag/: __init__.py  _typing.py  configuration.py
pdpipedag/backend/: __init__.py  blob.py  core.py  lock.py  metadata.py  table.py
pdpipedag/backend/sql/: __init__.py  ddl.py
pdpipedag/backend/util/: json.py  sql_ddl.py
pdpipedag/core/: __init__.py  container.py  materialise.py  metadata.py  schema.py  table.py
pdpipedag/core/util/: __init__.py  deepmutate.py  schema_ref_count.py
pdpipedag/errors/: __init__.py
pdpipedag/util/: __init__.py  deepmutate.py  import_.py  naming.py
src/pydiverse/pipedag/: __init__.py  _typing.py  config.py  configuration.py  context.py
src/pydiverse/pipedag/backend/: __init__.py  blob.py  core.py  lock.py  metadata.py  table.py  table_cache.py
src/pydiverse/pipedag/config/: __init__.py
src/pydiverse/pipedag/container/: __init__.py  container.py
src/pydiverse/pipedag/context/: __init__.py  context.py  run_context.py  trace_hook.py
src/pydiverse/pipedag/core/: __init__.py  config.py  container.py  flow.py  group_node.py  materialise.py  result.py  schema.py  stage.py  task.py
src/pydiverse/pipedag/debug/: __init__.py
src/pydiverse/pipedag/engine/: __init__.py  base.py  dask.py  (+2 more)
tests/: __init__.py  conftest.py  pipedag.toml  pipedag.yaml  pipedag_anchor.yaml  pipedag_complex.yaml  tasks_library.py  test_compression.py  test_core.py  test_dask.py  test_db2.py  test_graph.py  test_identity_insert.py  test_indexes.py  test_input_stage_versions.py  test_inputs.py  test_json.py  test_linking.py  test_lock_manager.py  test_materialize.py  test_materializing_task.py  test_run_group_node.json  test_run_group_node.py  test_run_subflow.py  test_simple_flow.py  test_sql_ddl.py  test_unicode.py  test_util.py  util.py
tests/fixtures/: instance.py  instances.py
tests/parallelize/: README.md  hooks.py  plugin.py  session.py  sesson.py  util.py  worker.py
tests/pipedag_test/: __init__.py
tests/resources/: pipedag.yaml
tests/test_annotation_integrations/: test_colspec.py  test_colspec_polars.py  test_dataframely.py
tests/test_cache/: conftest.py  spy.py  test_auto_version.py  test_basic_cache_invalidation.py  test_ignore_cache_function.py  test_ignore_fresh_input.py  test_local_table_cache.py
tests/test_flows/: test_example.py  test_flow.py  test_ibis.py  test_mutable_task_inputs.py  test_pdtransform.py  test_polars.py  test_raw_sql_pipeline.py  test_simple_flow.py  test_source_invalidation.py  test_sql_text_node.py
tests/test_flows/complex_config_flows/: conftest.py  pipedag_anchor.yaml  pipedag_complex.yaml  postgres_password.yaml  test_instance_selection.py  test_locking_instances.py
tests/test_flows/sql_scripts/: script1-db2.sql  script1.sql  script2.sql
tests/test_raw_sql/: test_raw_sql_cached_view_invalid.py  test_raw_sql_input.py  test_raw_sql_schema_swap.py  util.py
tests/test_sql_dialect/: test_ibm_db2.py  test_postgres.py
tests/test_sql_dialect/scripts/: simple_nicknames.sql  simple_table_spaces.sql
tests/test_table_hooks/: test_dtype_pandas.py  test_dtype_polars.py  test_dtype_pyarrow.py  test_dtype_sqlalchemy.py  test_ibis.py  test_pandas.py  test_pandas_hook.py  test_pdtransform.py  test_polars.py  test_polars_dataframely.py  test_sql_table_reference.py  test_sqlalchemy.py  test_tidypolars.py
tests/util/: __init__.py  baseline.py  dask_patch.py  pytest_raises.py  spy.py  sql.py  tasks_library.py  tasks_library_imperative.py
(+111 files in other folders)
