[project]
name = "pydiverse-pipedag"
version = "0.9.7"
description = "A pipeline orchestration library executing tasks within one python session. It takes care of SQL table (de)materialization, caching and cache invalidation. Blob storage is supported as well for example for storing model files."
authors = [
    {name = "QuantCo, Inc."},
    {name = "Nicolas Camenisch", email = "garnele007@gmail.com"},
    {name = "Martin Trautmann", email = "windiana@users.sf.net"},
]
license = "BSD-3-Clause"
readme = "docs/package/README.md"
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: SQL",
  "Topic :: Database",
]

dependencies = [
    "pandas>=1.4.3",
    "SQLAlchemy>=1.4.39",
    "typing-extensions>=4.1.0",
    "networkx>=2.8",
    "attrs>=22.1.0",
    "structlog>=22.1.0",
    "pynng>=0.7.1",
    "msgpack>=1.0.4",
    "packaging>=21.3",
    "python-box>=6.1.0",
    "PyYAML>=6.0",
    "pyarrow>=11.0.0",
    "cryptography>=41.0.1",
    "pydot>=1.4.2",
    "click>=8.1.3",
    "pyparsing>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydiverse"]

[project.scripts]
pipedag-manage = "pydiverse.pipedag.management.cli:cli"

[tool.ruff]
select = [
    "F",
    "E",
    "UP",
    "W",
    "I001",
    "I002",
    "B",
    "A",
]
ignore = [
    "B028",
]
extend-exclude = ["docs/*"]
ignore-init-module-imports = true
fix = true
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"src/pydiverse/pipedag/backend/table/sql/ddl.py" = ["F811"]
"tests/*" = ["F403", "F405"]

[tool.ruff.isort]
known-first-party = ["pydiverse"]
required-imports = ["from __future__ import annotations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
