[project]
name = "pydiverse-pipedag"
version = "0.10.3"
description = "A pipeline orchestration library executing tasks within one python session. It takes care of SQL table (de)materialization, caching and cache invalidation. Blob storage is supported as well for example for storing model files."
authors = [
  { name = "QuantCo, Inc." },
  { name = "Nicolas Camenisch", email = "garnele007@gmail.com" },
  { name = "Finn Rudolph", email = "finn.rudolph@t-online.de" },
  { name = "Martin Trautmann", email = "windiana@users.sf.net" },
]
license = { file = "LICENSE" }
readme = "docs/package/README.md"
requires-python = ">=3.10.18, <3.14"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: SQL",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
  "pydiverse-common >=0.3.4,<0.4",
  "typing-extensions >=4.14.0,<5",
  "networkx >=3.4,<4",
  "attrs >=25.3.0,<26",
  "structlog >=25.4.0,<26",
  "pynng >=0.8.1,<0.9",
  "msgpack >=1.1.1,<2",
  "packaging >=24.2,<26",
  "python-box >=7.3.2,<8",
  "pyyaml >=6.0.2,<7",
  "cryptography >=45.0.4,<46",
  "pydot >=4.0.0,<5",
  "click >=8.1.8,<9",
  "pyparsing >=3.2.3,<4",
  "sqlalchemy >=1.4.54,<3",
  "pandas >=1.5.3,<3",
  "pyarrow >=20.0.0,<21",
  "adbc-driver-postgresql >=1.6.0,<2",
  "psycopg2-binary >=2.9.10",
  "duckdb >=0.10.3,<2",                # py311pdsa1 requires < 1.3.0
  "duckdb-engine >=0.15.0,<0.16",
  "polars >=1.2.1,<2",                 # py311pdsa1all requires < 1.30.0
  "fsspec >=2025.5.1,<2026",
  "universal_pathlib >=0.2.6,<0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydiverse"]

[project.scripts]
pipedag-manage = "pydiverse.pipedag.management.cli:cli"

[tool.ruff]
select = ["F", "E", "UP", "W", "I001", "I002", "B", "A"]
ignore = ["B028"]
extend-exclude = ["docs/*"]
ignore-init-module-imports = true
fix = true
target-version = "py38"
# 88 leads to worse comments
line-length = 120

[tool.ruff.per-file-ignores]
"src/pydiverse/pipedag/backend/table/sql/ddl.py" = ["F811"]

[tool.ruff.isort]
known-first-party = ["pydiverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
