[metadata]
name = pydiverse.pipedag
description = A pipeline orchestration layer built on top of prefect for caching and cache invalidation to SQL and blob store targets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pydiverse/pydiverse.pipedag
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
python_requires = >=3.8
package_dir=
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
